--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ p{
 
     /* Define uma imagem de fundo para o corpo da página ao imprimir */
     body::before {
-        content: url('/Automa--o-Relatorio-Emplac/img/decalquesDetranCerto.jpg');
+        content: url('/Aut_relatorio/Automa--o-Relatorio-Emplac/img/decalquesDetranCerto.jpg');
         position: absolute;
         top: 0;
         left: 0;
@@ -88,7 +88,7 @@ p{
     }
     #ass{
         margin-top: 30px;
-        content: url('/Automa--o-Relatorio-Emplac/img/assinatura.jpg');
+        content: url('/Aut_relatorio/Automa--o-Relatorio-Emplac/img/assinatura.jpg');
 
     }
 
@@ -103,7 +103,7 @@ p{
         page-break-before: always;
 
         /* Define uma imagem de fundo para cada página */
-        background-image: url('/img/decalquesDetranCerto.jpg');
+        background-image: url("/Aut_relatorio/Automa--o-Relatorio-Emplac/img/decalquesDetranCerto.jpg");
         background-size: contain; /* Ajusta conforme necessário */
         background-repeat: no-repeat;
         background-position: center;
