--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,8 @@ p{
     text-align: center;
 }
 
-#ass{
-    display: flex;
+#ass,  #cabecalho{
+    display:none;
     flex-direction: column;
     width: 100%;
     height: auto;
@@ -70,84 +70,14 @@ p{
 
 
 @media print {
-    /* Esconde o elemento com a classe "inp_info" ao imprimir */
-    .inp_info {
+    #ass, #cabecalho{
+        display: flex;
+    }
+
+    main{
+        margin: 10px 0 30px 0;
+    }
+    .inp_info{
         display: none;
-    }
-
-    /* Define uma imagem de fundo para o corpo da página ao imprimir */
-    body::before {
-        content: url('/Aut_relatorio/Automa--o-Relatorio-Emplac/img/decalquesDetranCerto.jpg');
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%; /* Ajusta a largura conforme necessário */
-        height: 100%; /* Mantém a proporção da imagem */
-        z-index: -1; /* Certifica-se de que a imagem esteja atrás do conteúdo */
-        
-    }
-    #ass{
-        margin-top: 30px;
-        content: url('/Aut_relatorio/Automa--o-Relatorio-Emplac/img/assinatura.jpg');
-
-    }
-
-    /* Define a margem superior do corpo da página */
-    body {
-        margin-top: 330px; /* Ajusta conforme necessário */
-    }
-
-    /* Define estilos para a página ao imprimir */
-    @page {
-        /* Quebra de página antes de cada tabela */
-        page-break-before: always;
-
-        /* Define uma imagem de fundo para cada página */
-        background-image: url("/Aut_relatorio/Automa--o-Relatorio-Emplac/img/decalquesDetranCerto.jpg");
-        background-size: contain; /* Ajusta conforme necessário */
-        background-repeat: no-repeat;
-        background-position: center;
-        opacity: 0.5; /* Opcional: ajusta a opacidade para melhorar a legibilidade do conteúdo */
-        height: 100%;
-    }
-
-    /* Define estilos para as tabelas */
-    table {
-        /* Permite que a tabela seja dividida entre páginas */
-        page-break-inside: auto;
-        width: 800px; /* Ajusta a largura conforme necessário */
-    }
-
-    /* Define estilos para as linhas da tabela */
-    tr {
-        /* Evita que as linhas sejam divididas entre páginas */
-        page-break-inside: avoid;
-        page-break-after: auto;
-    }
-    .space {
-        padding: 300px;
-        background-color: aqua;
-        
-    
-    }
-
-    /* Define estilos para o cabeçalho da tabela */
-    thead {
-        display: table-header-group;
-    }
-
-    /* Define estilos para o rodapé da tabela */
-    tfoot {
-        display: table-footer-group;
-    }
-
-    /* Define estilos para o corpo da tabela */
-    tbody {
-        display: table-row-group;
-    }
-
-    /* Define quebra de página antes de cada linha com a classe "page-break" */
-    tr.page-break {
-        page-break-before: always;
     }
 }
