--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,12 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
+    
 }
 #btn > .botao{
     width: 100px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     margin-right: 5px;
 }
 
